Change for Heroku

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,4 +13,5 @@
   <a href="/posts/<%=post._id%>">Read More</a>
 </p>
 
-<% }) %> <%- include("partials/footer"); -%>
+<% }); %> 
+<%- include("partials/footer"); -%>
