--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,7 @@ h1 {
   text-transform: capitalize;
   font-family: "Caveat", cursive;
   font-size: 4rem;
+  display: flex;
 }
 
 p {
@@ -53,8 +54,12 @@ p {
   justify-content: space-between;
 }
 
-.delete {
-  margin-left: 2rem;
-  font-size: 2rem;
+.buttonChange {
+  font-size: 2.5rem;
   color: #1abc9c;
+  margin: auto 0 auto 4rem;
+}
+
+.buttonChange:hover {
+  color: red;
 }
