--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>CopyRight © 2021 Kshitij Kumar</p>
+    <p>Copyright © 2021 Kshitij Kumar</p>
   </div>
 </div>
 </body>
